# x07-platform

./: .gitignore  .gitmodules  README.md  SUPPORT.md  contracts  x07-toolchain.toml  x07.json  x07.lock.json  x07.mcp.router.json  x07.mcp.worker.json
.github/workflows/: contracts-boundary.yml
adapters/sql/: control_plane_index.sqlite.sql  deploy_loop_index.sqlite.sql  phaseB_index.sqlite.sql  phaseC_index.sqlite.sql
cli/src/: main.x07.json
docs/: SUMMARY.md  ci.md  contracts.md  deploy_local.md  deploy_plan_exec.md  index.md  mcp.md  observability_identity.md  phaseA.md  phaseB.md  preprod_e2e_test_plan.md  preprod_issue_log.md  query.md  quickstart.md  routing_local.md  runtime_local.md
docs/adr/: adr-rollout-state-machine.md  adr-scale-classes.md  adr-traffic-shifting.md  index.md
gateway/mcp/: .gitignore  README.md
scripts/: check_contracts_stub.sh  check_no_lpcloud.sh  contracts_sync.sh  deploy_exec_driver.py  gen_schema_index.py  gen_schema_index.sh  x07lp-driver
scripts/ci/: check_all.sh  check_golden.sh  check_phaseA_golden.sh  check_schema_index.sh  control_plane.sh  deploy_loop.sh  device-release-live-smoke.sh  device-release.sh  phaseB.sh  phaseC.sh  phaseD-oss.sh  prepare_otlp_export_mount.sh  preprod_e2e.sh  remote-oss.sh  target-conformance.sh  ui-screenshot-smoke.sh  use_workspace_x07_bins.sh  workload-k3s-chaos.sh  workload-k3s-smoke.sh  workload-k3s-soak.sh
tools/x07lp-driver/: Cargo.toml
tools/x07lp-driver/src/: device_release_provider.rs  device_release_telemetry.rs  main.rs  remote_fixture_manifest.rs  workload_runtime.rs
(+289 files in other folders)
